--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@ code {
 } */
 .yangkro {
   min-width: 960px;
-  padding: 0;
-  margin: 0;
+  /* padding: 0;
+  margin: 0; */
+  @import url('antd/');
 }
